Use DI for Couchbase

--- a/PaymentGateway/appsettings.json
+++ b/PaymentGateway/appsettings.json
@@ -3,8 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Couchbase": "Information"
     }
+  },
+  "Couchbase": {
+    "Servers": [ "http://127.0.0.1" ],
+    "username": "Administrator",
+    "password": "password"
   },
   "AllowedHosts": "*"
 }
