--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
+dist: xenial
+addons:
+  snaps:
+  - name: dotnet-sdk
+    classic: true
+    channel: latest/beta
+sudo: required
 language: csharp
-dist: trusty
 mono: none
-dotnet: 3.0.0
 install:
-- dotnet restore
+  - sudo snap alias dotnet-sdk.dotnet dotnet
+  - dotnet restore
 script:
-- dotnet build
-- dotnet test PaymentGateway.Tests/PaymentGateway.Tests.csproj
+  - dotnet build
+  - dotnet test PaymentGateway.Tests/PaymentGateway.Tests.csproj
