Add a simple banking service

--- a/PaymentGateway.Tests/PaymentGateway.Tests.csproj
+++ b/PaymentGateway.Tests/PaymentGateway.Tests.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PaymentGateway.Models\PaymentGateway.SharedModels.csproj" />
     <ProjectReference Include="..\PaymentGateway\PaymentGateway.csproj" />
   </ItemGroup>
 
