Add SharedModels library and refactor projects

--- a/BankService/BankService.csproj
+++ b/BankService/BankService.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PaymentGateway.Models\PaymentGateway.SharedModels.csproj" />
+    <ProjectReference Include="..\PaymentGateway.SharedModels\PaymentGateway.SharedModels.csproj" />
   </ItemGroup>
 
 </Project>
