--- a/PaymentGateway.Tests/PaymentGateway.Tests.csproj
+++ b/PaymentGateway.Tests/PaymentGateway.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PaymentGateway.Models\PaymentGateway.SharedModels.csproj" />
+    <ProjectReference Include="..\PaymentGateway.SharedModels\PaymentGateway.SharedModels.csproj" />
     <ProjectReference Include="..\PaymentGateway\PaymentGateway.csproj" />
   </ItemGroup>
 
