--- a/PaymentGateway/PaymentGateway.csproj
+++ b/PaymentGateway/PaymentGateway.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PaymentGateway.Models\PaymentGateway.SharedModels.csproj" />
+    <ProjectReference Include="..\PaymentGateway.SharedModels\PaymentGateway.SharedModels.csproj" />
   </ItemGroup>
 
 </Project>
