--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,24 @@ services:
             - COUCHBASE_ADMINISTRATOR_PASSWORD=password
             - COUCHBASE_BUCKET=Transactions
             - COUCHBASE_BUCKET_PASSWORD=
-        
+    
+    bank:
+        build:
+          context: .
+          dockerfile: ./docker/Bank-Dockerfile
+        restart: always
+        ports:
+          - 5001:80
+
     payment-gateway:
-        build: .
+        build: 
+          context: .
+          dockerfile: ./docker/Gateway-Dockerfile
         restart: always
         ports:
           - 5000:80
         environment:
           - Couchbase:Servers:0=http://$COMPUTERNAME:8091/
         depends_on:
+          - bank
           - couchbase
