--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
         ports:
           - 5000:80
         environment:
+          - BANK_URL=http://bank
           - Couchbase:Servers:0=http://couchbase:8091/
         depends_on:
           - bank
